# triggerbot

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp
src/common/: com_resource.h
src/config/: config.cpp  config.h
src/features/: triggerbot.cpp  triggerbot.h
src/graphics/: desktop_duplicator.cpp  desktop_duplicator.h  overlay.cpp  overlay.h
src/input/: input_helper.cpp  input_helper.h  keycode_mapper.cpp  keycode_mapper.h
src/performance/: performance_tracker.cpp  performance_tracker.h
src/ui/: ui_helper.cpp  ui_helper.h
